--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,56 +1,67 @@
 .headerContainer {
-  height: 5rem;
-  border-bottom: 1px solid var(--gray-800);
-}
-.headerContent {
-  max-width: 1120px;
-  height: 5rem;
-  margin: 0 auto;
-  padding: 0 2rem;
-
-  display: flex;
-  align-items: center;
-
-  nav {
-    margin-left: 5rem;
     height: 5rem;
+    border-bottom: 1px solid var(--gray-800);
+}
 
-    a {
-      display: inline-block;
-      position: relative;
-      padding: 0 0.5rem;
-      height: 5rem;
-      line-height: 5rem;
-      color: var(--gray-300);
+.headerContent {
+    display: flex;
+    align-items: center;
 
-      transition: color 0.2s;
+    max-width: 1120px;
+    height: 5rem;
+    margin: 0 auto;
+    padding: 0 2rem;
 
-      & + a {
-        margin-left: 2rem;
-      }
-
-      &:hover {
-        color: var(--white);
-      }
-
-      &.active {
-        color: var(--white);
-        font-weight: bold;
-      }
-
-      &.active::after {
-        content: "";
-        height: 3px;
-        border-radius: 3px 3px 0 0;
-        width: 100%;
-        position: absolute;
-        bottom: 1px;
-        left: 0;
-        background: var(--yellow-500);
-      }
+    @media(max-width: 992px){
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
     }
-  }
-  button{
-    margin-left: auto;
-  }
+
+    nav {
+        margin-left: 5rem;
+        height: 5rem;
+        margin-right: auto;
+
+        a {
+            display: inline-block;
+            position: relative;
+            padding: 0 0.5rem;
+            height: 5rem;
+            line-height: 5rem;
+            color: var(--gray-300);
+            transition: color 0.2s;
+
+            & + a {
+                margin-left: 2rem;
+            }
+            &:hover {
+                color: var(--white);
+            }
+
+            &.active {
+                color: var(--white);
+                font-weight: bold;
+            }
+
+            &.active::after {
+                content: '';
+                height: 3px;
+                border-radius: 3px 3px 0 0;
+                width: 100%;
+                position: absolute;
+                bottom: 1px;
+                left: 0;
+                background: var(--yellow-500);
+            }
+        }
+    }
+
+    > button {
+
+        @media(max-width: 992px){
+            margin-top: 10px;
+        }
+    }
+
 }
